Support exponential price format

For some (e.g. Bitcoin) currencies, the current rate is returned in an
exponential format (e.g. 5.222e-23). This change provides the support to
extract that price correctly.

BUG: 492072
FIXED-IN: 8.2